# ailiance-bench

./: .gitignore  AGENTS.md  README.md  requirements.txt
mascarade-eval/: .gitignore  pyproject.toml
mascarade-eval/docs/: grist-native-views-recipe.md  grist-widget-setup.md  heldout-sources.md
mascarade-eval/mascarade_eval/: __init__.py  aggregate.py  filter_heldout.py  judge.py  leakage_check.py  mine_upstream.py  run_eval.py  runner.py  scorers.py  train_corpus.py
mascarade-eval/mascarade_eval/grist/: README.md  __init__.py  cli.py  client.py  domain-pages-runbook.md  domain_pages.py  export.py  grist_migrate.py  ingest.py  llm_schema.py  migrate.py  publish.py  (+2 more)
mascarade-eval/scripts/: build_domain_pages.py  curate_freecad_reddit.py  export_grist.py  migrate_grist_docs.py  mine_multiday.py  populate_sourcing.py  provision_llm_docs.py  sync_pipeline_status.py
mascarade-eval/tests/: conftest.py  test_aggregate.py  test_build_domain_pages.py  test_filter_heldout.py  test_grist_cli.py  test_grist_client.py  test_grist_constants.py  test_grist_domain_pages.py  test_grist_export.py  test_grist_ingest.py  test_grist_llm_schema.py  test_grist_migrate_domain.py  test_grist_migrate_engine.py  test_grist_migrate_transforms.py  test_grist_pipeline_sync.py  test_grist_publish.py  test_grist_roundtrip.py  test_grist_schema.py  test_judge.py  test_leakage_check.py  test_migrate_grist_docs.py  test_mine_upstream.py  test_populate_sourcing.py  test_provision_llm_docs.py  test_run_eval_smoke.py  test_runner.py  test_scorers.py  test_sync_pipeline_status.py  test_train_corpus.py
(+165 files in other folders)
