[project]
name = "mascarade-eval"
version = "0.1.0"
description = "Trustworthy eval harness for the 10 mascarade hardware LoRAs"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mascarade_eval*"]
